tests/baselines/reference/genericFunctionCallSignatureReturnTypeMismatch.errors.txt
tests/cases/compiler/genericFunctionCallSignatureReturnTypeMismatch.ts(6,1): error TS2322: Type '<S>() => S[]' is not assignable to type '<T>(x: T) => T'.
  Type 'unknown[]' is not assignable to type 'T'.
    'T' could be instantiated with an arbitrary type which could be unrelated to 'unknown[]'.


==== tests/cases/compiler/genericFunctionCallSignatureReturnTypeMismatch.ts (1 errors) ====
    interface Array<T> {}
    
    var f : { <T>(x:T): T; }
    
    var g : { <S>() : S[]; };
    f = g;
    ~
!!! error TS2322: Type '<S>() => S[]' is not assignable to type '<T>(x: T) => T'.
!!! error TS2322:   Type 'unknown[]' is not assignable to type 'T'.
!!! error TS2322:     'T' could be instantiated with an arbitrary type which could be unrelated to 'unknown[]'.
    
    var s = f("str").toUpperCase();
    
    console.log(s);
    